Data Ordner verschoben.

--- a/SRC/MediaMarkt_Agent.ipynb
+++ b/SRC/MediaMarkt_Agent.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-10-24T15:24:09.752359Z",
-     "start_time": "2025-10-24T15:24:09.748446Z"
+     "end_time": "2025-10-25T16:55:28.731991Z",
+     "start_time": "2025-10-25T16:55:28.721208Z"
     }
    },
    "source": [
@@ -25,8 +25,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-24T15:24:09.766876Z",
-     "start_time": "2025-10-24T15:24:09.761677Z"
+     "end_time": "2025-10-25T16:55:28.758315Z",
+     "start_time": "2025-10-25T16:55:28.752335Z"
     }
    },
    "cell_type": "code",
@@ -44,7 +44,7 @@
    ],
    "id": "fe696e7230c5d0e7",
    "outputs": [],
-   "execution_count": 31
+   "execution_count": 65
   },
   {
    "metadata": {},
@@ -55,8 +55,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-24T15:24:09.790783Z",
-     "start_time": "2025-10-24T15:24:09.786412Z"
+     "end_time": "2025-10-25T16:55:28.780745Z",
+     "start_time": "2025-10-25T16:55:28.776319Z"
     }
    },
    "cell_type": "code",
@@ -72,7 +72,7 @@
    ],
    "id": "9cb3e49925466b67",
    "outputs": [],
-   "execution_count": 32
+   "execution_count": 66
   },
   {
    "metadata": {},
@@ -83,8 +83,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-24T15:24:10.295061Z",
-     "start_time": "2025-10-24T15:24:09.802523Z"
+     "end_time": "2025-10-25T16:55:29.247097Z",
+     "start_time": "2025-10-25T16:55:28.798606Z"
     }
    },
    "cell_type": "code",
@@ -128,7 +128,7 @@
      ]
     }
    ],
-   "execution_count": 33
+   "execution_count": 67
   },
   {
    "metadata": {},
@@ -139,8 +139,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-24T15:24:10.313091Z",
-     "start_time": "2025-10-24T15:24:10.307388Z"
+     "end_time": "2025-10-25T16:55:29.264075Z",
+     "start_time": "2025-10-25T16:55:29.258188Z"
     }
    },
    "cell_type": "code",
@@ -161,12 +161,12 @@
        "(2, 2, 83)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 34
+   "execution_count": 68
   },
   {
    "metadata": {},
@@ -177,8 +177,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-24T15:24:12.893723Z",
-     "start_time": "2025-10-24T15:24:10.337957Z"
+     "end_time": "2025-10-25T16:55:31.121658Z",
+     "start_time": "2025-10-25T16:55:29.290735Z"
     }
    },
    "cell_type": "code",
@@ -203,7 +203,7 @@
      ]
     }
    ],
-   "execution_count": 35
+   "execution_count": 69
   },
   {
    "metadata": {},
@@ -214,8 +214,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-24T15:24:12.909182Z",
-     "start_time": "2025-10-24T15:24:12.903617Z"
+     "end_time": "2025-10-25T16:55:31.138097Z",
+     "start_time": "2025-10-25T16:55:31.132026Z"
     }
    },
    "cell_type": "code",
@@ -254,7 +254,7 @@
    ],
    "id": "793fb2bed6a52c58",
    "outputs": [],
-   "execution_count": 36
+   "execution_count": 70
   },
   {
    "metadata": {},
@@ -265,8 +265,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-24T15:24:12.930069Z",
-     "start_time": "2025-10-24T15:24:12.925235Z"
+     "end_time": "2025-10-25T16:55:31.175662Z",
+     "start_time": "2025-10-25T16:55:31.166594Z"
     }
    },
    "cell_type": "code",
@@ -323,7 +323,7 @@
    ],
    "id": "f5aca2bdcc7a049a",
    "outputs": [],
-   "execution_count": 37
+   "execution_count": 71
   },
   {
    "metadata": {},
@@ -334,8 +334,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-24T15:24:13.910653Z",
-     "start_time": "2025-10-24T15:24:12.939729Z"
+     "end_time": "2025-10-25T16:55:31.747247Z",
+     "start_time": "2025-10-25T16:55:31.192972Z"
     }
    },
    "cell_type": "code",
@@ -349,10 +349,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Leider liegen mir im aktuellen Kontext keine Informationen zu den verfügbaren Zahlungsarten bei MediaMarkt CH vor. Bitte besuchen Sie unsere Webseite oder kontaktieren Sie den Kundenservice für die genauen Details.\n",
+      "Im vorliegenden Kontext liegen keine Informationen zu den verfügbaren Zahlungsarten bei MediaMarkt CH vor. \n",
       "\n",
-      "**Quellen:**  \n",
-      "- Keine verfügbaren Quellen im bereitgestellten Kontext.\n",
+      "Quellen: –\n",
       "\n",
       "Quellen:\n",
       "- https://faq-de.mediamarkt.ch/s/article/rueckgabe-umtausch\n",
@@ -360,7 +359,7 @@
      ]
     }
    ],
-   "execution_count": 38
+   "execution_count": 72
   }
  ],
  "metadata": {
