Retriever Promt angepasst.

--- a/SRC/MediaMarkt_Agent.ipynb
+++ b/SRC/MediaMarkt_Agent.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-10-25T16:55:28.731991Z",
-     "start_time": "2025-10-25T16:55:28.721208Z"
+     "end_time": "2025-10-25T17:01:05.601497Z",
+     "start_time": "2025-10-25T17:01:05.587989Z"
     }
    },
    "source": [
@@ -25,8 +25,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-25T16:55:28.758315Z",
-     "start_time": "2025-10-25T16:55:28.752335Z"
+     "end_time": "2025-10-25T17:01:05.626603Z",
+     "start_time": "2025-10-25T17:01:05.619790Z"
     }
    },
    "cell_type": "code",
@@ -44,7 +44,7 @@
    ],
    "id": "fe696e7230c5d0e7",
    "outputs": [],
-   "execution_count": 65
+   "execution_count": 73
   },
   {
    "metadata": {},
@@ -55,8 +55,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-25T16:55:28.780745Z",
-     "start_time": "2025-10-25T16:55:28.776319Z"
+     "end_time": "2025-10-25T17:01:05.652397Z",
+     "start_time": "2025-10-25T17:01:05.646725Z"
     }
    },
    "cell_type": "code",
@@ -72,7 +72,7 @@
    ],
    "id": "9cb3e49925466b67",
    "outputs": [],
-   "execution_count": 66
+   "execution_count": 74
   },
   {
    "metadata": {},
@@ -83,8 +83,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-25T16:55:29.247097Z",
-     "start_time": "2025-10-25T16:55:28.798606Z"
+     "end_time": "2025-10-25T17:01:06.059508Z",
+     "start_time": "2025-10-25T17:01:05.664061Z"
     }
    },
    "cell_type": "code",
@@ -128,7 +128,7 @@
      ]
     }
    ],
-   "execution_count": 67
+   "execution_count": 75
   },
   {
    "metadata": {},
@@ -139,8 +139,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-25T16:55:29.264075Z",
-     "start_time": "2025-10-25T16:55:29.258188Z"
+     "end_time": "2025-10-25T17:01:06.078799Z",
+     "start_time": "2025-10-25T17:01:06.071869Z"
     }
    },
    "cell_type": "code",
@@ -161,12 +161,12 @@
        "(2, 2, 83)"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 68
+   "execution_count": 76
   },
   {
    "metadata": {},
@@ -177,8 +177,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-25T16:55:31.121658Z",
-     "start_time": "2025-10-25T16:55:29.290735Z"
+     "end_time": "2025-10-25T17:01:08.240148Z",
+     "start_time": "2025-10-25T17:01:06.098444Z"
     }
    },
    "cell_type": "code",
@@ -203,7 +203,7 @@
      ]
     }
    ],
-   "execution_count": 69
+   "execution_count": 77
   },
   {
    "metadata": {},
@@ -214,8 +214,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-25T16:55:31.138097Z",
-     "start_time": "2025-10-25T16:55:31.132026Z"
+     "end_time": "2025-10-25T17:01:08.258178Z",
+     "start_time": "2025-10-25T17:01:08.251401Z"
     }
    },
    "cell_type": "code",
@@ -254,7 +254,7 @@
    ],
    "id": "793fb2bed6a52c58",
    "outputs": [],
-   "execution_count": 70
+   "execution_count": 78
   },
   {
    "metadata": {},
@@ -265,8 +265,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-25T16:55:31.175662Z",
-     "start_time": "2025-10-25T16:55:31.166594Z"
+     "end_time": "2025-10-25T17:01:08.275416Z",
+     "start_time": "2025-10-25T17:01:08.268848Z"
     }
    },
    "cell_type": "code",
@@ -301,7 +301,8 @@
     "    try:\n",
     "        from langchain_core.prompts import ChatPromptTemplate\n",
     "    except ModuleNotFoundError:\n",
-    "        from langchain.prompts import ChatPromptTemplate\n",
+    "        from langchain_core.prompts import ChatPromptTemplate\n",
+    "\n",
     "\n",
     "    SAFE_SYSTEM_PROMPT = (\n",
     "        \"Du bist Kundenberater:in für MediaMarkt CH.\\n\"\n",
@@ -323,7 +324,7 @@
    ],
    "id": "f5aca2bdcc7a049a",
    "outputs": [],
-   "execution_count": 71
+   "execution_count": 79
   },
   {
    "metadata": {},
@@ -334,8 +335,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-25T16:55:31.747247Z",
-     "start_time": "2025-10-25T16:55:31.192972Z"
+     "end_time": "2025-10-25T17:01:08.868140Z",
+     "start_time": "2025-10-25T17:01:08.291421Z"
     }
    },
    "cell_type": "code",
@@ -349,9 +350,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Im vorliegenden Kontext liegen keine Informationen zu den verfügbaren Zahlungsarten bei MediaMarkt CH vor. \n",
+      "Leider liegen mir im aktuellen Kontext keine Informationen zu den verfügbaren Zahlungsarten vor.  \n",
       "\n",
-      "Quellen: –\n",
+      "**Quellen:** –\n",
       "\n",
       "Quellen:\n",
       "- https://faq-de.mediamarkt.ch/s/article/rueckgabe-umtausch\n",
@@ -359,7 +360,7 @@
      ]
     }
    ],
-   "execution_count": 72
+   "execution_count": 80
   }
  ],
  "metadata": {
