--- a/SRC/MediaMarkt_Agent.ipynb
+++ b/SRC/MediaMarkt_Agent.ipynb
@@ -329,7 +329,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "Test",
+   "source": "Testfragen",
    "id": "d50c600f85383c86"
   },
   {
@@ -342,7 +342,11 @@
    "cell_type": "code",
    "source": [
     "\n",
-    "print(answer_with_rag(\"Welche Zahlungsarten gibt es?\"))\n"
+    "print(answer_with_rag(\"Wie lange ist die Rückgabefrist?\"))\n",
+    "print()\n",
+    "print(answer_with_rag(\"Welche Online-Zahlungsmethoden gibt es?\"))\n",
+    "print()\n",
+    "print(answer_with_rag(\"Was deckt die Versicherung/Garantie ab?\"))\n"
    ],
    "id": "b6c6add21328dd80",
    "outputs": [
