UI mit gradio gmacht

--- a/SRC/MediaMarkt_Agent.ipynb
+++ b/SRC/MediaMarkt_Agent.ipynb
@@ -25,8 +25,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-26T19:27:37.451783Z",
-     "start_time": "2025-10-26T19:27:37.443974Z"
+     "end_time": "2025-10-26T22:15:46.081361Z",
+     "start_time": "2025-10-26T22:15:46.068788Z"
     }
    },
    "cell_type": "code",
@@ -44,7 +44,7 @@
    ],
    "id": "fe696e7230c5d0e7",
    "outputs": [],
-   "execution_count": 66
+   "execution_count": 1
   },
   {
    "metadata": {},
@@ -55,8 +55,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-26T19:27:37.483599Z",
-     "start_time": "2025-10-26T19:27:37.475149Z"
+     "end_time": "2025-10-26T22:15:55.032151Z",
+     "start_time": "2025-10-26T22:15:55.027992Z"
     }
    },
    "cell_type": "code",
@@ -72,7 +72,7 @@
    ],
    "id": "9cb3e49925466b67",
    "outputs": [],
-   "execution_count": 67
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -83,8 +83,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-26T19:27:42.021196Z",
-     "start_time": "2025-10-26T19:27:37.506607Z"
+     "end_time": "2025-10-26T22:16:03.257722Z",
+     "start_time": "2025-10-26T22:15:56.660403Z"
     }
    },
    "cell_type": "code",
@@ -182,15 +182,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ 12 Dokumente geladen.\n",
+      "✅ 3 Dokumente geladen.\n",
       "🔹 Beispieltext: Garantie und Versicherung | MediaMarkt\n",
       "\n",
       "Zum Hauptinhalt wechselnAlle KategorienWas suchst du?Mein MarktKein Markt ausgewähltlanguageSwitch.voiceOverDescription: DeutschdeMenüAngebotemyMediaMarktServiceGeschenkkarteMediaMagazinEigenmarkenMarkenshops% Outlet %Shopping CardSmartbarJobsHilfeAlle Kategor\n",
-      "FAISS Index erstellt mit: 94 Vektoren\n"
+      "FAISS Index erstellt mit: 54 Vektoren\n"
      ]
     }
    ],
-   "execution_count": 68
+   "execution_count": 4
   },
   {
    "metadata": {
@@ -214,8 +214,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-26T19:27:42.060649Z",
-     "start_time": "2025-10-26T19:27:42.049020Z"
+     "end_time": "2025-10-26T22:16:05.029412Z",
+     "start_time": "2025-10-26T22:16:05.019455Z"
     }
    },
    "cell_type": "code",
@@ -233,15 +233,15 @@
     {
      "data": {
       "text/plain": [
-       "(129, 12, 528)"
+       "(73, 3, 543)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 69
+   "execution_count": 5
   },
   {
    "metadata": {},
@@ -252,8 +252,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-26T19:27:54.613490Z",
-     "start_time": "2025-10-26T19:27:42.083020Z"
+     "end_time": "2025-10-26T22:16:17.418998Z",
+     "start_time": "2025-10-26T22:16:06.541700Z"
     }
    },
    "cell_type": "code",
@@ -274,11 +274,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FAISS Vektoren: 129\n"
+      "FAISS Vektoren: 73\n"
      ]
     }
    ],
-   "execution_count": 70
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -289,8 +289,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-26T19:27:54.633100Z",
-     "start_time": "2025-10-26T19:27:54.626861Z"
+     "end_time": "2025-10-26T22:16:20.007731Z",
+     "start_time": "2025-10-26T22:16:19.973266Z"
     }
    },
    "cell_type": "code",
@@ -329,7 +329,7 @@
    ],
    "id": "793fb2bed6a52c58",
    "outputs": [],
-   "execution_count": 71
+   "execution_count": 7
   },
   {
    "metadata": {},
@@ -340,8 +340,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-26T19:27:54.657078Z",
-     "start_time": "2025-10-26T19:27:54.648932Z"
+     "end_time": "2025-10-26T22:16:22.047636Z",
+     "start_time": "2025-10-26T22:16:22.041679Z"
     }
    },
    "cell_type": "code",
@@ -400,7 +400,7 @@
    ],
    "id": "f5aca2bdcc7a049a",
    "outputs": [],
-   "execution_count": 72
+   "execution_count": 8
   },
   {
    "metadata": {},
@@ -411,8 +411,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-26T19:27:56.261538Z",
-     "start_time": "2025-10-26T19:27:54.669635Z"
+     "end_time": "2025-10-26T22:16:26.023198Z",
+     "start_time": "2025-10-26T22:16:25.223521Z"
     }
    },
    "cell_type": "code",
@@ -423,26 +423,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Die reguläre Retourenfrist beträgt **14 Tage** ab Erhalt der Ware.  \n",
-      "Für **MediaMarkt CLUB‑Mitglieder** gilt die doppelte Frist, also **28 Tage**.  \n",
+      "Die im bereitgestellten Informationen wird keine konkrete Rückgabefrist angegeben.  \n",
       "\n",
       "**Quellen:**  \n",
-      "- „innerhalb der 14‑tägigen Retourenfrist … (für CLUB Mitglieder doppelt so lange Umtauschfrist)“【1】\n",
+      "- „Wie retourniere ich ein Produkt?“ (Abschnitt zu Rückgabemöglichkeiten)  \n",
+      "- „Ich habe fälschlicherweise ein defektes Produkt als Retoure per Post versendet…“ (Hinweis zu defekten Artikeln)  \n",
       "\n",
       "Quellen:\n",
-      "- C:\\Users\\simon\\OneDrive\\FH\\BAI\\GENAI_Grupp_G\\data\\raw\\retouren.html\n",
-      "- C:\\Users\\simon\\OneDrive\\FH\\BAI\\GENAI_Grupp_G\\data\\raw\\garantie_und_versicherung _ MediaMarkt.html\n",
-      "- C:\\Users\\simon\\OneDrive\\FH\\BAI\\GENAI_Grupp_G\\data\\raw\\Zahlungsarten _ MediaMarkt.html\n"
+      "- C:\\Users\\yanni\\PycharmProjects\\GENAI_Grupp_G\\data\\raw\\stornieren_&_zurückgeben.html\n",
+      "- C:\\Users\\yanni\\PycharmProjects\\GENAI_Grupp_G\\data\\raw\\garantie_und_versicherung _ MediaMarkt.html\n"
      ]
     }
    ],
-   "execution_count": 73
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-26T19:28:05.922669Z",
-     "start_time": "2025-10-26T19:27:56.296928Z"
+     "end_time": "2025-10-26T19:48:30.535882Z",
+     "start_time": "2025-10-26T19:48:30.039608Z"
     }
    },
    "cell_type": "code",
@@ -453,32 +452,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Im MediaMarkt‑Onlineshop CH stehen dir folgende Online‑Zahlungsoptionen zur Verfügung:\n",
-      "\n",
-      "- **Kreditkarte**  \n",
-      "- **PayPal**  \n",
-      "- **Twint**  \n",
-      "- **Google Pay**  \n",
-      "\n",
-      "Zusätzlich kannst du im Markt bezahlen oder per Rechnung kaufen, doch die genannten vier Optionen sind die reinen Online‑Zahlungsmethoden【1】.\n",
+      "Im bereitgestellten Kontext wird lediglich erwähnt, dass MediaMarkt CH „eine Vielzahl an Zahlungsmöglichkeiten“ anbietet, aber es werden keine konkreten Online‑Zahlungsarten (z. B. Kreditkarte, PayPal, Twint usw.) aufgelistet.\n",
       "\n",
       "**Quellen:**  \n",
-      "1. „…ob du per Kreditkarte, PayPal, Twint, Bezahlung im Markt, Kauf auf Rechnung oder mit einem Dienstleister wie Google Pay bezahlen möchtest …“ (Zahlungsarten‑Seite)\n",
+      "- MediaMarkt‑Service‑Übersicht: „…eine Vielzahl an Zahlungsmöglichkeiten…“ (aus dem Kontext)\n",
       "\n",
       "Quellen:\n",
-      "- zahlungsarten _ mediamarkt.pdf\n",
-      "- C:\\Users\\simon\\OneDrive\\FH\\BAI\\GENAI_Grupp_G\\data\\raw\\Zahlungsarten _ MediaMarkt.html\n",
-      "- C:\\Users\\simon\\OneDrive\\FH\\BAI\\GENAI_Grupp_G\\data\\raw\\garantie_und_versicherung _ MediaMarkt.html\n"
+      "- C:\\Users\\yanni\\PycharmProjects\\GENAI_Grupp_G\\data\\raw\\informieren_&_kaufen.html\n",
+      "- C:\\Users\\yanni\\PycharmProjects\\GENAI_Grupp_G\\data\\raw\\garantie_und_versicherung _ MediaMarkt.html\n"
      ]
     }
    ],
-   "execution_count": 74
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-26T19:28:08.243243Z",
-     "start_time": "2025-10-26T19:28:05.951592Z"
+     "end_time": "2025-10-26T19:48:32.985788Z",
+     "start_time": "2025-10-26T19:48:32.545468Z"
     }
    },
    "cell_type": "code",
@@ -489,21 +480,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Die im bereitgestellten Informationen ist keine Angabe zur Dauer der Herstellergarantie bei MediaMarkt enthalten.  \n",
+      "Die bereitgestellten Informationen enthalten keine Angabe zur Dauer der Herstellergarantie bei MediaMarkt.  \n",
       "\n",
       "**Quellen:**  \n",
-      "- „Garantie und Versicherung | MediaMarkt“ (Übersichts‑Seite, kein konkreter Hinweis auf Garantiezeit)  \n",
-      "\n",
-      "Ohne weitere Angaben kann ich die genaue Gültigkeitsdauer nicht nennen.\n",
+      "- „Garantie und Versicherung“ (MediaMarkt) – kein Hinweis auf die Garantiedauer.\n",
       "\n",
       "Quellen:\n",
-      "- C:\\Users\\simon\\OneDrive\\FH\\BAI\\GENAI_Grupp_G\\data\\raw\\garantie_und_versicherung _ MediaMarkt.html\n",
-      "- C:\\Users\\simon\\OneDrive\\FH\\BAI\\GENAI_Grupp_G\\data\\raw\\stornieren_&_zurückgeben.html\n",
-      "- C:\\Users\\simon\\OneDrive\\FH\\BAI\\GENAI_Grupp_G\\data\\raw\\Zahlungsarten _ MediaMarkt.html\n"
+      "- C:\\Users\\yanni\\PycharmProjects\\GENAI_Grupp_G\\data\\raw\\garantie_und_versicherung _ MediaMarkt.html\n",
+      "- C:\\Users\\yanni\\PycharmProjects\\GENAI_Grupp_G\\data\\raw\\stornieren_&_zurückgeben.html\n",
+      "- C:\\Users\\yanni\\PycharmProjects\\GENAI_Grupp_G\\data\\raw\\informieren_&_kaufen.html\n"
      ]
     }
    ],
-   "execution_count": 75
+   "execution_count": 12
   },
   {
    "metadata": {
@@ -613,15 +602,118 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-26T19:28:20.786392Z",
-     "start_time": "2025-10-26T19:28:20.781213Z"
+     "end_time": "2025-10-26T22:22:24.957391Z",
+     "start_time": "2025-10-26T22:22:23.884803Z"
     }
    },
    "cell_type": "code",
-   "source": "",
-   "id": "ee6439559c200468",
-   "outputs": [],
-   "execution_count": null
+   "source": [
+    "import gradio as gr\n",
+    "\n",
+    "# --- Gradio UI ---\n",
+    "def chat_interface(user_question):\n",
+    "    # Ruft euren bestehenden RAG-Agenten auf:\n",
+    "    response = answer_with_rag(user_question)\n",
+    "    return response\n",
+    "\n",
+    "# --- Custom CSS für MediaMarkt Style ---\n",
+    "custom_css = \"\"\"\n",
+    "body {\n",
+    "    background-color: #ffffff;\n",
+    "    font-family: 'Helvetica', sans-serif;\n",
+    "}\n",
+    ".gradio-container {\n",
+    "    border: 3px solid #e60000;\n",
+    "    border-radius: 20px;\n",
+    "    padding: 25px;\n",
+    "    background: linear-gradient(180deg, #ffffff 0%, #ffecec 100%);\n",
+    "    box-shadow: 0 0 25px rgba(230, 0, 0, 0.1);\n",
+    "}\n",
+    "h1, h2, h3 {\n",
+    "    color: #e60000;\n",
+    "    text-align: center;\n",
+    "    font-weight: 900;\n",
+    "    text-transform: uppercase;\n",
+    "}\n",
+    "textarea {\n",
+    "    border: 2px solid #e60000 !important;\n",
+    "    border-radius: 12px !important;\n",
+    "    padding: 12px !important;\n",
+    "    background-color: #fffafa !important;\n",
+    "    font-size: 16px !important;\n",
+    "}\n",
+    "button {\n",
+    "    background-color: #e60000 !important;\n",
+    "    color: #ffffff !important;\n",
+    "    border-radius: 12px !important;\n",
+    "    border: none !important;\n",
+    "    font-weight: bold !important;\n",
+    "    transition: all 0.3s ease-in-out !important;\n",
+    "}\n",
+    "button:hover {\n",
+    "    background-color: #b30000 !important;\n",
+    "    transform: scale(1.05);\n",
+    "}\n",
+    ".output-markdown {\n",
+    "    background-color: #fffafa !important;\n",
+    "    border: 1px solid #e60000 !important;\n",
+    "    border-radius: 12px !important;\n",
+    "    padding: 15px !important;\n",
+    "}\n",
+    "footer {\n",
+    "    text-align: center;\n",
+    "    font-size: 13px;\n",
+    "    color: #666;\n",
+    "    margin-top: 15px;\n",
+    "}\n",
+    "\"\"\"\n",
+    "\n",
+    "demo = gr.Interface(\n",
+    "    fn=chat_interface,\n",
+    "    inputs=gr.Textbox(\n",
+    "        label=\"💬 Frage:\",\n",
+    "        placeholder=\"Frag den MediaMarkt Kundenservice...\",\n",
+    "        lines=2,\n",
+    "    ),\n",
+    "    outputs=gr.Markdown(label=\"📖 Antwort\"),\n",
+    "    title=\"🛒 MediaMarkt KI-Kundenservice\",\n",
+    "    description=\"Dieser KI-Agent beantwortet Fragen auf Basis echter MediaMarkt-Dokumente (RAG + Safeguarding).\",\n",
+    "    theme=\"gradio/soft\",\n",
+    "    examples=[\n",
+    "        [\"Wie lange ist die Retourenfrist?\"],\n",
+    "        [\"Wie reklamiere ich ein defektes Produkt?\"],\n",
+    "        [\"Welche Zahlungsmöglichkeiten gibt es?\"],\n",
+    "    ],\n",
+    "    css=custom_css,  # <- MediaMarkt Design anwenden\n",
+    ")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    demo.launch(share=False)\n"
+   ],
+   "id": "54952c7ef18b0da3",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7862\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ],
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7862/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "execution_count": 16
   }
  ],
  "metadata": {
